--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -274,13 +274,9 @@ production stylesheet in assets/built/screen.css
     height: 88px;
     font-size: 1.6rem;
     line-height: 1.3em;
-    background-color: #fff;
-    z-index: 150;
-}
-
-.has-cover:not(.home-template) .gh-head {
-    background-color: var(--ghost-accent-color);
+    background-color: var(--color-darkgrey);
     color: #fff;
+    z-index: 150;
 }
 
 :is(.home-template, .paged:not(.tag-template):not(.author-template)).has-cover .gh-head {
@@ -289,8 +285,6 @@ production stylesheet in assets/built/screen.css
     right: 0;
     left: 0;
     z-index: 2000;
-    background-color: transparent;
-    color: #fff;
 }
 
 .gh-head a {
@@ -381,14 +375,14 @@ production stylesheet in assets/built/screen.css
         top: 80px;
         left: 0;
         width: 100%;
-        height: 1px;
+        height: 2px;
         content: "";
-        background-color: var(--color-lightgrey);
+        background-color: rgba(255, 255, 255, 0.15);
     }
 
     .is-head-stacked.has-cover .gh-head-menu::before,
     .is-head-stacked.has-cover .gh-head-menu::after {
-        background-color: rgba(255, 255, 255, 0.2);
+        background-color: rgba(255, 255, 255, 0.15);
     }
 
     .is-head-stacked .gh-head-menu::after {
@@ -416,9 +410,9 @@ production stylesheet in assets/built/screen.css
     display: block;
     font-family: var(--gh-font-heading, var(--font-serif));
     font-weight: 800;
-    font-size: 3.0rem;
+    font-size: 2.9rem;
     letter-spacing: -0.02em;
-    color: inherit;
+    color: #7ac0ff;
     white-space: nowrap;
 }
 
@@ -427,7 +421,7 @@ production stylesheet in assets/built/screen.css
 }
 
 .has-cover .gh-head-logo {
-    color: #fff;
+    color: #7ac0ff;
 }
 
 .gh-head-logo img {
@@ -464,7 +458,10 @@ production stylesheet in assets/built/screen.css
 .gh-head-menu .nav a {
     display: inline-block;
     line-height: 1.7;
-    color: inherit;
+    color: rgba(255, 255, 255, 0.75);
+    text-transform: uppercase;
+    letter-spacing: 0.04em;
+    font-size: 1.35rem;
 }
 
 .gh-head-menu .nav a:hover {
@@ -489,7 +486,7 @@ production stylesheet in assets/built/screen.css
 
 @media (min-width: 992px) {
     body:not(.is-dropdown-loaded) .gh-head-menu .nav > li {
-        opacity: 0;
+        opacity: 1;
     }
 }
 
@@ -586,6 +583,7 @@ production stylesheet in assets/built/screen.css
 
 .gh-head-link {
     font-weight: 500;
+    font-size: 1.45rem;
     color: inherit;
 }
 
@@ -597,7 +595,7 @@ production stylesheet in assets/built/screen.css
     height: 44px;
     font-weight: 600;
     letter-spacing: -0.005em;
-    font-size: 1.6rem;
+    font-size: 1.45rem;
     border-radius: 48px;
     color: #fff;
     background: var(--ghost-accent-color);
@@ -733,7 +731,7 @@ production stylesheet in assets/built/screen.css
     }
 
     #gh-head .gh-head-logo {
-        font-size: 2.2rem;
+        font-size: 2.5rem;
     }
 
     #gh-head .gh-head-brand .gh-search {
@@ -768,6 +766,7 @@ production stylesheet in assets/built/screen.css
         font-size: 2.6rem;
         font-weight: 600;
         text-transform: none;
+        color: #fff;
     }
 
     #gh-head .nav li {
@@ -778,6 +777,10 @@ production stylesheet in assets/built/screen.css
     #gh-head :is(.gh-head-button, .gh-head-link) {
         opacity: 0;
         transform: translateY(8px);
+    }
+
+    #gh-head .gh-head-link {
+      font-size: 1.8rem;
     }
 
     #gh-head .gh-head-button {
@@ -1019,9 +1022,9 @@ production stylesheet in assets/built/screen.css
     margin-top: 12px;
     max-width: 720px;
     font-family: var(--gh-font-body, var(--font-serif));
-    font-size: 1.6rem;
+    font-size: 1.7rem;
     line-height: 1.5;
-    letter-spacing: 0.05em;
+    letter-spacing: 0.01em;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     word-break: break-word;
@@ -1414,6 +1417,7 @@ is the very first element in the post content */
     font-size: 2rem;
     line-height: 1.6em;
     letter-spacing: -0.01em;
+    word-spacing: -0.08em;
 }
 
 .gh-content > p img {
@@ -1775,7 +1779,7 @@ iframe.instagram-media + script + :not([id]) {
 .article-byline-meta .author-name {
     margin: 0 0 6px;
     font-family: var(--gh-font-heading, var(--font-sans));
-    font-size: 1.65rem;
+    font-size: 1.6rem;
     font-weight: 500;
     letter-spacing: 0;
     text-transform: uppercase;
@@ -2190,7 +2194,7 @@ html.dark-mode figcaption a {
     color: #fff;
 }
 
-html.dark-mode body:not(.has-cover) .gh-head {
+html.dark-mode body .gh-head {
     background: var(--color-darkmode);
     color: #fff;
 }
@@ -2360,8 +2364,8 @@ html.dark-mode .footer-cta-title {
 }
 
 @media (max-width: 767px) {
-    html.dark-mode .gh-head-open:not(.has-cover) #gh-head,
-    html.dark-mode .gh-head-open:not(.has-cover) #gh-head .gh-head-actions {
+    html.dark-mode .gh-head-open #gh-head,
+    html.dark-mode .gh-head-open #gh-head .gh-head-actions {
         background: var(--color-darkmode);
     }
 }
@@ -2384,7 +2388,7 @@ html.dark-mode .footer-cta-title {
         color: #fff;
     }
 
-    html.auto-color body:not(.has-cover) .gh-head {
+    html.auto-color body .gh-head {
         background: var(--color-darkmode);
         color: #fff;
     }
@@ -2554,8 +2558,8 @@ html.dark-mode .footer-cta-title {
     }
 
     @media (max-width: 767px) {
-        html.auto-color .gh-head-open:not(.has-cover) #gh-head,
-        html.auto-color .gh-head-open:not(.has-cover) #gh-head .gh-head-actions {
+        html.auto-color .gh-head-open #gh-head,
+        html.auto-color .gh-head-open #gh-head .gh-head-actions {
             background: var(--color-darkmode);
         }
     }
