fix: german ui translation

--- a/tag.hbs
+++ b/tag.hbs
@@ -33,7 +33,7 @@
                     {{#if description}}
                         {{description}}
                     {{else}}
-                        A collection of {{plural ../pagination.total empty='zero posts' singular='% post' plural='% posts'}}
+                        Eine Sammlung von {{plural ../pagination.total empty='keinen Beiträgen' singular='% post' plural='% Beiträgen'}}
                     {{/if}}
                 </div>
             </div>
