--- a/post.hbs
+++ b/post.hbs
@@ -104,8 +104,8 @@ into the {body} tag of the default.hbs template --}}
         <div class="inner">
             {{#if @custom.email_signup_text}}<h2 class="footer-cta-title">{{@custom.email_signup_text}}</h2>{{/if}}
             <a class="footer-cta-button" href="#/portal" data-portal>
-                <div class="footer-cta-input">Enter your email</div>
-                <span>Subscribe</span>
+                <div class="footer-cta-input">E-Mail Adresse</div>
+                <span>Abonnieren</span>
             </a>
         </div>
     </section>
