--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -279,7 +279,7 @@ body {
     font-style: normal;
     letter-spacing: 0;
     text-rendering: optimizeLegibility;
-    background: var(--color-body-bg, #f4f1eb);
+    background: #fff;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -288,8 +288,7 @@ body {
 
 ::selection {
     text-shadow: none;
-    background: rgba(25, 140, 255, 0.25);
-    color: inherit;
+    background: #daf2fd;
 }
 
 hr {
@@ -412,7 +411,7 @@ h5,
 h6 {
     margin-top: 0;
     line-height: 1.15;
-    font-family: var(--gh-font-heading, var(--font-serif));
+    font-family: var(--gh-font-heading, var(--font-sans));
     font-weight: 600;
     text-rendering: optimizeLegibility;
     letter-spacing: -0.01em;
@@ -437,7 +436,7 @@ h2 {
 }
 @media (max-width: 600px) {
     h2 {
-        font-size: 2.4rem;
+        font-size: 2.3rem;
     }
 }
 
@@ -448,7 +447,7 @@ h3 {
 }
 @media (max-width: 600px) {
     h3 {
-        font-size: 2.0rem;
+        font-size: 1.7rem;
     }
 }
 
