--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -37,16 +37,11 @@ production stylesheet in assets/built/screen.css
     --color-red: #f05230;
     --color-darkgrey: #15171A;
     --color-midgrey: #738a94;
-    --color-lightgrey: #f4f1eb;
+    --color-lightgrey: #f1f1f1;
     --color-secondary-text: #979797;
     --color-border: #e1e1e1;
     --color-wash: #e5eff5;
-    --color-darkmode: #161614;
-    --color-header-footer: #161614;
-    --color-logo: #f4f1eb;
-    --color-nav-link: #f4f1eb;
-    --color-nav-divider: #15171A;
-    --color-body-bg: #f4f1eb;
+    --color-darkmode: #151719;
 
     /*
     An accent color is also set by Ghost itself in
@@ -59,8 +54,8 @@ production stylesheet in assets/built/screen.css
 
     /* Fonts */
     --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    --font-serif: "Iowan Old Style", "Palatino Linotype", Palatino, "Book Antiqua", Georgia, "Times New Roman", serif;
-    --font-mono: "SF Mono", "Fira Code", Menlo, Consolas, "Courier New", monospace;
+    --font-serif: Georgia, Times, serif;
+    --font-mono: Menlo, Courier, monospace;
 
 }
 
@@ -199,11 +194,11 @@ production stylesheet in assets/built/screen.css
 }
 
 .site-description:first-child {
-    font-family: var(--gh-font-heading, var(--font-mono));
+    font-family: var(--gh-font-heading, var(--font-sans));
 }
 
 .has-serif-title:not([class*=" gh-font-heading"]):not([class^="gh-font-heading"]) .site-description:first-child {
-    font-family: var(--gh-font-heading, var(--font-sans));
+    font-family: var(--gh-font-heading, var(--font-serif));
 }
 
 :is(.site-logo, .site-title) + .site-description {
@@ -279,9 +274,13 @@ production stylesheet in assets/built/screen.css
     height: 88px;
     font-size: 1.6rem;
     line-height: 1.3em;
-    background-color: var(--color-header-footer);
-    color: #fff;
+    background-color: #fff;
     z-index: 150;
+}
+
+.has-cover:not(.home-template) .gh-head {
+    background-color: var(--ghost-accent-color);
+    color: #fff;
 }
 
 :is(.home-template, .paged:not(.tag-template):not(.author-template)).has-cover .gh-head {
@@ -290,6 +289,8 @@ production stylesheet in assets/built/screen.css
     right: 0;
     left: 0;
     z-index: 2000;
+    background-color: transparent;
+    color: #fff;
 }
 
 .gh-head a {
@@ -380,14 +381,14 @@ production stylesheet in assets/built/screen.css
         top: 80px;
         left: 0;
         width: 100%;
-        height: 2px;
+        height: 1px;
         content: "";
-        background-color: var(--color-nav-divider);
+        background-color: var(--color-lightgrey);
     }
 
     .is-head-stacked.has-cover .gh-head-menu::before,
     .is-head-stacked.has-cover .gh-head-menu::after {
-        background-color: var(--color-nav-divider);
+        background-color: rgba(255, 255, 255, 0.2);
     }
 
     .is-head-stacked .gh-head-menu::after {
@@ -413,11 +414,11 @@ production stylesheet in assets/built/screen.css
 
 .gh-head-logo {
     display: block;
-    font-family: var(--gh-font-heading, var(--font-serif));
+    font-family: var(--gh-font-heading, var(--font-sans));
     font-weight: 800;
-    font-size: 2.7rem;
+    font-size: 2.6rem;
     letter-spacing: -0.02em;
-    color: var(--color-logo);
+    color: inherit;
     white-space: nowrap;
 }
 
@@ -426,7 +427,7 @@ production stylesheet in assets/built/screen.css
 }
 
 .has-cover .gh-head-logo {
-    color: var(--color-logo);
+    color: #fff;
 }
 
 .gh-head-logo img {
@@ -439,10 +440,9 @@ production stylesheet in assets/built/screen.css
 
 .gh-head-menu {
     display: flex;
-    font-family: var(--font-sans);
     align-items: center;
     margin-top: 1px;
-    font-weight: 400;
+    font-weight: 500;
 }
 
 .gh-head-menu .nav {
@@ -463,10 +463,7 @@ production stylesheet in assets/built/screen.css
 .gh-head-menu .nav a {
     display: inline-block;
     line-height: 1.7;
-    color: var(--color-nav-link);
-    text-transform: uppercase;
-    letter-spacing: 0.04em;
-    font-size: 1.3rem;
+    color: inherit;
 }
 
 .gh-head-menu .nav a:hover {
@@ -491,7 +488,7 @@ production stylesheet in assets/built/screen.css
 
 @media (min-width: 992px) {
     body:not(.is-dropdown-loaded) .gh-head-menu .nav > li {
-        opacity: 1;
+        opacity: 0;
     }
 }
 
@@ -588,31 +585,21 @@ production stylesheet in assets/built/screen.css
 
 .gh-head-link {
     font-weight: 500;
-    font-size: 1.4rem;
     color: inherit;
-}
-
-.gh-head-link:hover {
-    color: var(--color-body-bg);
 }
 
 .gh-head-button {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    padding: 8px 15px;
+    padding: 8px 20px;
     height: 44px;
     font-weight: 600;
     letter-spacing: -0.005em;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     border-radius: 48px;
-    border: 2px solid var(--color-body-bg);
-    color: var(--color-body-bg);
-}
-
-.gh-head-button:hover {
-    color: var(--color-border);
-    border-color: var(--color-border);
+    color: #fff;
+    background: var(--ghost-accent-color);
 }
 
 .has-cover .gh-head-button {
@@ -643,7 +630,6 @@ production stylesheet in assets/built/screen.css
     background-color: transparent;
     border: 0;
     outline: none;
-    color: var(--color-nav-link);
 }
 
 .gh-search:hover {
@@ -694,7 +680,7 @@ production stylesheet in assets/built/screen.css
     width: 24px;
     height: 1px;
     content: "";
-    background-color: var(--color-body-bg);
+    background-color: var(--color-darkgrey);
     transition: all 0.2s cubic-bezier(0.04, 0.04, 0.12, 0.96) 0.1008s;
 }
 
@@ -746,7 +732,7 @@ production stylesheet in assets/built/screen.css
     }
 
     #gh-head .gh-head-logo {
-        font-size: 2.5rem;
+        font-size: 2.2rem;
     }
 
     #gh-head .gh-head-brand .gh-search {
@@ -778,10 +764,9 @@ production stylesheet in assets/built/screen.css
     }
 
     #gh-head .nav a {
-        font-size: 2.4rem;
+        font-size: 2.6rem;
         font-weight: 600;
         text-transform: none;
-        color: #fff;
     }
 
     #gh-head .nav li {
@@ -792,10 +777,6 @@ production stylesheet in assets/built/screen.css
     #gh-head :is(.gh-head-button, .gh-head-link) {
         opacity: 0;
         transform: translateY(8px);
-    }
-
-    #gh-head .gh-head-link {
-      font-size: 1.8rem;
     }
 
     #gh-head .gh-head-button {
@@ -817,7 +798,7 @@ production stylesheet in assets/built/screen.css
 
     .gh-head-open.has-cover #gh-head,
     .gh-head-open.has-cover #gh-head .gh-head-actions {
-        background-color: var(--color-header-footer);
+        background-color: var(--ghost-accent-color);
     }
 
     .gh-head-open #gh-head .gh-head-menu,
@@ -848,7 +829,7 @@ production stylesheet in assets/built/screen.css
         gap: 12px;
         align-items: center;
         padding: max(4vmin, 20px) 0 max(4vmin, 28px);
-        background-color: var(--color-header-footer);
+        background-color: #fff;
     }
 
     .gh-head-open #gh-head :is(.gh-head-button, .gh-head-link) {
@@ -979,7 +960,6 @@ production stylesheet in assets/built/screen.css
     gap: 12px;
     margin: 0 0 10px;
     color: var(--color-secondary-text);
-    font-family: var(--gh-font-heading, var(--font-sans));
     font-size: 1.4rem;
     font-weight: 600;
     letter-spacing: -0.005em;
@@ -1036,17 +1016,15 @@ production stylesheet in assets/built/screen.css
     overflow-y: hidden;
     margin-top: 12px;
     max-width: 720px;
-    font-family: var(--gh-font-body, var(--font-serif));
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     line-height: 1.5;
-    letter-spacing: 0.01em;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     word-break: break-word;
 }
 
 .has-sans-body:not([class*=" gh-font-body"]):not([class^="gh-font-body"]) .post-card-excerpt {
-    font-family: var(--gh-font-body, var(--font-serif));
+    font-family: var(--gh-font-body, var(--font-sans));
 }
 
 .post-card:not(.post-card-large):not(.post-card-full):not(.dynamic):not(.no-image) .post-card-excerpt {
@@ -1069,7 +1047,6 @@ production stylesheet in assets/built/screen.css
     margin-top: 12px;
     padding: 0;
     font-size: 1.3rem;
-    font-family: var(--gh-font-heading, var(--font-sans));
     color: var(--color-secondary-text);
 }
 
@@ -1427,12 +1404,10 @@ is the very first element in the post content */
 .gh-content > ul,
 .gh-content > dl,
 .gh-content > p {
-    font-family: var(--gh-font-body, var(--font-mono));
+    font-family: var(--gh-font-body, var(--font-serif));
     font-weight: 400;
-    font-size: 1.8rem;
+    font-size: 2rem;
     line-height: 1.6em;
-    letter-spacing: -0.02em;
-    word-spacing: -0.02em;
 }
 
 .gh-content > p img {
@@ -1451,7 +1426,7 @@ is the very first element in the post content */
 .gh-content .kg-toggle-card .kg-toggle-content > ol,
 .gh-content .kg-toggle-card .kg-toggle-content > ul,
 .gh-content .kg-toggle-card .kg-toggle-content > p {
-    font-family: var(--gh-font-body, var(--font-serif));
+    font-family: var(--font-serif);
     font-weight: 400;
     font-size: 1.9rem;
     line-height: 1.6em;
@@ -1482,7 +1457,7 @@ is the very first element in the post content */
 .has-sans-body:not([class*=" gh-font-body"]):not([class^="gh-font-body"]) .gh-content .kg-toggle-card .kg-toggle-content > ol,
 .has-sans-body:not([class*=" gh-font-body"]):not([class^="gh-font-body"]) .gh-content .kg-toggle-card .kg-toggle-content > ul,
 .has-sans-body:not([class*=" gh-font-body"]):not([class^="gh-font-body"]) .gh-content .kg-toggle-card .kg-toggle-content > p {
-    font-family: var(--gh-font-body, var(--font-mono));
+    font-family: var(--gh-font-body, var(--font-sans));
 }
 
 .gh-content > ul,
@@ -1509,16 +1484,6 @@ is the very first element in the post content */
     bottom: 0;
     width: 0.3rem;
     background: var(--ghost-accent-color);
-}
-
-.post-card-tags,
-.post-card-meta,
-.article-tag a,
-.byline-meta-content {
-      font-family: var(--font-mono);
-      font-size: 1.4rem;
-      letter-spacing: 0.02em;
-      text-transform: uppercase;
 }
 
 .gh-content :not(pre) > code {
@@ -1562,23 +1527,13 @@ is the very first element in the post content */
     .gh-content .kg-toggle-card .kg-toggle-content > ol,
     .gh-content .kg-toggle-card .kg-toggle-content > ul,
     .gh-content .kg-toggle-card .kg-toggle-content > p {
-        font-family: var(--gh-font-body, var(--font-mono));
-        font-weight: 400;
-        font-size: 1.6rem;
-        line-height: 1.6em;
-        letter-spacing: -0.02em;
-        word-spacing: -0.02em;
+        font-size: 1.8rem;
     }
 
     .gh-content .kg-product-card .kg-product-card-description > p,
     .gh-content .kg-product-card .kg-product-card-description > ol,
     .gh-content .kg-product-card .kg-product-card-description > ul {
-        font-family: var(--gh-font-body, var(--font-mono));
-        font-weight: 400;
         font-size: 1.6rem;
-        line-height: 1.6em;
-        letter-spacing: -0.02em;
-        word-spacing: -0.02em;
     }
 
     .gh-content blockquote:not([class])::before {
@@ -1631,12 +1586,12 @@ except for when immediately preceeded by a heading */
 }
 
 .kg-blockquote-alt {
-    font-family: var(--gh-font-body, var(--font-serif));
+    font-family: var(--font-serif);
     color: var(--color-midgrey);
 }
 
 .has-sans-body:not([class*=" gh-font-body"]):not([class^="gh-font-body"]) .kg-blockquote-alt {
-    font-family: var(--gh-font-body, var(--font-mono));
+    font-family: var(--gh-font-body, var(--font-sans));
 }
 
 .kg-card.kg-header-card.kg-style-dark {
@@ -1733,7 +1688,7 @@ iframe.instagram-media + script + :not([id]) {
     width: auto;
     border-spacing: 0;
     border-collapse: collapse;
-    font-family: var(--font-mono);
+    font-family: var(--font-sans);
     font-size: 1.6rem;
     white-space: nowrap;
     vertical-align: top;
@@ -1796,18 +1751,15 @@ iframe.instagram-media + script + :not([id]) {
 
 .article-byline-meta {
     color: var(--color-secondary-text);
-    font-family: var(--gh-font-heading, var(--font-sans));
     font-size: 1.4rem;
     line-height: 1.2em;
 }
 
 .article-byline-meta .author-name {
     margin: 0 0 6px;
-    font-family: var(--gh-font-heading, var(--font-sans));
-    font-size: 1.5rem;
-    font-weight: 500;
+    font-size: 1.7rem;
+    font-weight: 700;
     letter-spacing: 0;
-    text-transform: uppercase;
 }
 
 .article-byline-meta .bull {
@@ -2112,12 +2064,11 @@ iframe.instagram-media + script + :not([id]) {
 
 .site-footer {
     position: relative;
-    font-family: var(--font-sans);
     margin: max(12vmin, 64px) 0 0 0;
     padding-top: 48px;
     padding-bottom: 140px;
     color: #fff;
-    background: var(--color-header-footer);
+    background: color-mod(var(--color-darkgrey) l(-5%));
 }
 
 .page-template .site-footer {
@@ -2127,8 +2078,8 @@ iframe.instagram-media + script + :not([id]) {
 .site-footer .inner {
     display: grid;
     grid-gap: 40px;
-    grid-template-columns: 1fr 1fr 1fr;
-    color: var(--color-body-bg);
+    grid-template-columns: auto 1fr auto;
+    color: rgba(255,255,255,0.7);
     font-size: 1.3rem;
 }
 
@@ -2203,7 +2154,7 @@ iframe.instagram-media + script + :not([id]) {
 /* ---------------------------------------------------------- */
 
 html.dark-mode body {
-    color: rgba(255, 255, 255, 0.85);
+    color: rgba(255, 255, 255, 0.75);
     background: var(--color-darkmode);
 }
 
@@ -2219,8 +2170,8 @@ html.dark-mode figcaption a {
     color: #fff;
 }
 
-html.dark-mode body .gh-head {
-    background: var(--color-header-footer);
+html.dark-mode body:not(.has-cover) .gh-head {
+    background: var(--color-darkmode);
     color: #fff;
 }
 
@@ -2242,15 +2193,15 @@ html.dark-mode .post-card-image {
 }
 
 html.dark-mode :is(.post-card-tags, .post-card-meta, .article-tag a, .byline-meta-content, .pagination .page-number) {
-    color: color-mod(var(--color-secondary-text) l(+50%));
+    color: color-mod(var(--color-secondary-text) l(-22%));
 }
 
 html.dark-mode .post-card-featured {
-    color: rgba(255, 255, 255, 0.85);
+    color: #fff;
 }
 
 html.dark-mode .post-card-title {
-    color: rgba(255, 255, 255, 0.85);
+    color: #fff;
 }
 
 html.dark-mode .post-card-excerpt {
@@ -2258,11 +2209,11 @@ html.dark-mode .post-card-excerpt {
 }
 
 html.dark-mode .pagination a {
-    color: rgba(255, 255, 255, 0.85);
+    color: #fff;
 }
 
 html.dark-mode .author-profile-location {
-    color: rgba(255, 255, 255, 0.85);
+    color: #fff;
 }
 
 html.dark-mode .author-profile-social-link:hover {
@@ -2270,7 +2221,7 @@ html.dark-mode .author-profile-social-link:hover {
 }
 
 html.dark-mode .article-title {
-    color: rgba(255, 255, 255, 0.85);
+    color: #fff;
 }
 
 html.dark-mode .article-excerpt {
@@ -2295,7 +2246,7 @@ html.dark-mode .author-profile-image path {
 }
 
 html.dark-mode .article-byline-meta .author-name a {
-    color: rgba(255, 255, 255, 0.85);
+    color: #fff;
 }
 
 html.dark-mode .no-image .author-social-link a {
@@ -2385,19 +2336,13 @@ html.dark-mode .kg-bookmark-card a.kg-bookmark-container:hover {
 }
 
 html.dark-mode .footer-cta-title {
-    color: rgba(255, 255, 255, 0.85);
-}
-
-html.dark-mode .footer-cta-button {
-    background: color-mod(var(--color-darkmode) l(+15%));
-    border-color: color-mod(var(--color-darkmode) l(+20%));
-    color: rgba(255, 255, 255, 0.6);
+    color: #fff;
 }
 
 @media (max-width: 767px) {
-    html.dark-mode .gh-head-open #gh-head,
-    html.dark-mode .gh-head-open #gh-head .gh-head-actions {
-        background: var(--color-header-footer);
+    html.dark-mode .gh-head-open:not(.has-cover) #gh-head,
+    html.dark-mode .gh-head-open:not(.has-cover) #gh-head .gh-head-actions {
+        background: var(--color-darkmode);
     }
 }
 
@@ -2419,8 +2364,8 @@ html.dark-mode .footer-cta-button {
         color: #fff;
     }
 
-    html.auto-color body .gh-head {
-        background: var(--color-header-footer);
+    html.auto-color body:not(.has-cover) .gh-head {
+        background: var(--color-darkmode);
         color: #fff;
     }
 
@@ -2442,15 +2387,15 @@ html.dark-mode .footer-cta-button {
     }
 
     html.auto-color :is(.post-card-tags, .post-card-meta, .article-tag a, .byline-meta-content, .pagination .page-number) {
-        color: color-mod(var(--color-secondary-text) l(+50%));
+        color: color-mod(var(--color-secondary-text) l(-22%));
     }
 
     html.auto-color .post-card-featured {
-        color: rgba(255, 255, 255, 0.85);
+        color: #fff;
     }
 
     html.auto-color .post-card-title {
-        color: rgba(255, 255, 255, 0.85);
+        color: #fff;
     }
 
     html.auto-color .post-card-excerpt {
@@ -2458,11 +2403,11 @@ html.dark-mode .footer-cta-button {
     }
 
     html.auto-color .pagination a {
-        color: rgba(255, 255, 255, 0.85);
+        color: #fff;
     }
 
     html.auto-color .author-profile-location {
-        color: rgba(255, 255, 255, 0.85);
+        color: #fff;
     }
 
     html.auto-color .author-profile-social-link:hover {
@@ -2470,7 +2415,7 @@ html.dark-mode .footer-cta-button {
     }
 
     html.auto-color .article-title {
-        color: rgba(255, 255, 255, 0.85);
+        color: #fff;
     }
 
     html.auto-color .article-excerpt {
@@ -2495,7 +2440,7 @@ html.dark-mode .footer-cta-button {
     }
 
     html.auto-color .article-byline-meta .author-name a {
-        color: rgba(255, 255, 255, 0.85);
+        color: #fff;
     }
 
     html.auto-color .no-image .author-social-link a {
@@ -2585,19 +2530,13 @@ html.dark-mode .footer-cta-button {
     }
 
     html.auto-color .footer-cta-title {
-        color: rgba(255, 255, 255, 0.85);
-    }
-
-    html.auto-color .footer-cta-button {
-        background: color-mod(var(--color-darkmode) l(+15%));
-        border-color: color-mod(var(--color-darkmode) l(+20%));
-        color: rgba(255, 255, 255, 0.6);
+        color: #fff;
     }
 
     @media (max-width: 767px) {
-        html.auto-color .gh-head-open #gh-head,
-        html.auto-color .gh-head-open #gh-head .gh-head-actions {
-            background: var(--color-header-footer);
+        html.auto-color .gh-head-open:not(.has-cover) #gh-head,
+        html.auto-color .gh-head-open:not(.has-cover) #gh-head .gh-head-actions {
+            background: var(--color-darkmode);
         }
     }
 }
